# pico-tiny

./: .gitmodules  CMakeLists.txt  README.md
include/: tiny_default_i2c.h  tiny_default_spi.h  tiny_default_uart.h  tiny_heartbeat.h  tiny_i2c.h  tiny_spi.h  tiny_uart0.h  tiny_uart1.h
src/: heartbeat.c  tiny_default_i2c.c  tiny_default_spi.c  tiny_heartbeat.c  tiny_i2c.c  tiny_spi.c  tiny_time_source.c  tiny_uart0.c  tiny_uart1.c
